--- a/src/features/packs/packsList/PacksList.module.css
+++ b/src/features/packs/packsList/PacksList.module.css
@@ -1,42 +1,45 @@
 .mainContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-    max-width: 80%;
-    min-height: 80vh;
-    margin: 0 auto;
+  max-width: 80%;
+  min-height: 80vh;
+  margin: 0 auto;
 
-    text-align: center;
+  text-align: center;
 }
 
 .tableContainer {
-    box-shadow: 0px 0px 12px -2px rgba(34, 60, 80, 0.2);
+  box-shadow: 0px 0px 12px -2px rgba(34, 60, 80, 0.2);
 }
 
 .addPack {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .addPackBtn {
-    width: 150px;
-    height: 36px;
+  width: 150px;
+  height: 36px;
 
-    background-color: #366eff;
-    border: 0;
-    border-radius: 30px;
-    box-shadow: 0 4px 18px rgba(54, 110, 255, 0.35), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+  background-color: #366eff;
+  border: 0;
+  border-radius: 30px;
+  box-shadow: 0 4px 18px rgba(54, 110, 255, 0.35), inset 0 1px 0 rgba(255, 255, 255, 0.3);
 }
 
 .addPackBtn:active {
-    background-color: #1544d9;
+  background-color: #1544d9;
 }
 
 .filtersContainer {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 
-    margin-bottom: 20px;
+  margin-bottom: 20px;
+}
+.sortCell:hover {
+  cursor: pointer;
 }
